[tool.poetry]
name = "image-extend"
version = "0.1.0"
description = ""
authors = ["Eric Thiebaut-George <github@dungorm.com>"]
readme = "README.md"
packages = [{include = "image_extend"}]

[tool.poetry.dependencies]
python = "3.9.15"
diffusers = "0.9.0"
transformers = "^4.25.1"
ftfy = "^6.1.1"
accelerate = "^0.15.0"
gradio = "3.11.0"
fpie = "^0.2.4"
timm = "^0.6.12"
scikit-image = "^0.19.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
